[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nanousd-ovrtx"
version = "0.1.0"
description = "OVRTX-compatible Python facade for nanousd renderer backends"
requires-python = ">=3.10"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]
